/**
Erstelle dein Programm über Blockly und
klicke auf 'Play', um es auszuführen!
*/

public class DiscoKugel { 
    public DiscoKugel(double x, double y) {
    }

    public void act() {
    }

}